Added some presentations to the webpage.

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -27,6 +27,7 @@
 <li><a href="../texworksautocompletion">TeXworks autocompletion</a></li>
 <!--</ul>-->
 <li><a href="../publications">Publications</a></li>
+<li><a href="../presentations">Presentations</a></li>
 <li><a href="../contact">Contact</a></li>
 </ul>
 <body>
