Remove link to non existing page.

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -36,7 +36,8 @@
           <li><a href="../texworksautocompletion">TeXworks autocompletion</a></li>
 <!--          <li><a href="../todonotes">Todonotes</a></li> -->
         </ul>
-        <h2><a href="../teaching">Teaching</a></h2>
+        <h2>Teaching</h2>
+<!--        <h2><a href="../teaching">Teaching</a></h2> -->
 <!--          <li><a href="mathematicsandphysics.html">Mathematics and physics</a></li> -->
       </div>
     </nav>
